--- a/workspace/ims-client/src/styles.css
+++ b/workspace/ims-client/src/styles.css
@@ -62,6 +62,10 @@ label.custom-label-w-10 {
     background-color: rgb(195, 214, 238) !important;
 }
 
+.bg-row-purple-highlight {
+    background-color: rgb(222, 177, 236) !important;
+}
+
 td.right {
     text-align: right !important;
 }
